<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app">El Camino del Inca</string>
    <string name="send">Send message</string>
    <string name="action_settings">Settings</string>
    <string name="login_email">Correo electronico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_confirm_password">Confirmar Contraseña</string>
    <string name="login_enter">Ingresar</string>
    <string name="login_register_pre">¿Aún no tienes una cuenta?</string>
    <string name="login_register"><![CDATA[<u>Regístrate</u>]]></string>
    <string name="game_code_pre">Ingresa el código de emparejamiento:</string>
    <string name="game_pause">Activa para jugar\n(Mueve el switch)</string>
    <string name="game_code_button">Listo</string>
    <string name="register_text">Regístrate y se parte de una nueva experiencia en juegos:</string>
</resources>
