<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:background="#D9D9D9"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/game_match">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_code_pre"
            android:gravity="center"
            android:textSize="@dimen/font_size_code_text"/>
        <EditText
            android:id="@+id/game_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/font_size_code"
            android:layout_margin="50dip"
            android:inputType="number"/>
        <Button
            android:id="@+id/game_code_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_code_button"
            android:padding="@dimen/font_size_text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/game_message"
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:gravity="center"
        android:textSize="@dimen/font_size_code_text"
        android:layout_marginTop="50dip"
        android:text="@string/game_pause"
        android:visibility="gone"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="50dip"
        android:layout_gravity="center"
        android:id="@+id/game_controls">
        <TableRow
            android:gravity="center">
            <Button
                android:id="@+id/b11"
                android:layout_width="100dip"
                android:layout_height="100dip"/>
            <Button
                android:id="@+id/game_move_forward"
                android:layout_width="100dip"
                android:layout_height="100dip"/>
            <Button
                android:id="@+id/b13"
                android:layout_width="100dip"
                android:layout_height="100dip"/>
        </TableRow>
        <TableRow
            android:gravity="center">
            <Button
                android:id="@+id/game_move_left"
                android:layout_width="100dip"
                android:layout_height="100dip"/>
            <Button
                android:id="@+id/game_move_camera"
                android:layout_width="100dip"
                android:layout_height="100dip"/>
            <Button
                android:id="@+id/game_move_right"
                android:layout_width="100dip"
                android:layout_height="100dip"/>
        </TableRow>
        <TableRow
            android:gravity="center">
            <Button
                android:id="@+id/b31"
                android:layout_width="100dip"
                android:layout_height="100dip"/>
            <Button
                android:id="@+id/game_move_backward"
                android:layout_width="100dip"
                android:layout_height="100dip"/>
            <Button
                android:id="@+id/b33"
                android:layout_width="100dip"
                android:layout_height="100dip"/>
        </TableRow>
    </TableLayout>

    <Switch
        android:id="@+id/game_switch"
        android:layout_width="wrap_content"
        android:layout_height="100dip"
        android:thumbTextPadding="25dp"
        android:layout_gravity="center"/>

</LinearLayout>
